fixed css hover and initial styling for project css

--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
       </header>
 
       <section>
-        <div class="linkContainer">
+        <div onclick="location.href='sprints.html'" class="linkContainer">
           <div class="linkContent">
-            <a href="sprints.html">
-              SPRINTS
-            </a>
+            SPRINTS
           </div>
         </div>
         <div class="linkDetail">
@@ -73,11 +71,9 @@
       </section>
 
       <section>
-        <div class="linkContainer">
+        <div onclick="location.href='projects.html'" class="linkContainer">
           <div class="linkContent">
-            <a href="projects.html">
-              PROJECTS
-            </a>
+            PROJECTS
           </div>
         </div>
         <div class="linkDetail">
