--- a/projects.html
+++ b/projects.html
@@ -39,42 +39,24 @@
         </nav>
       </div>
     </div>
-    <section>
-      <!-- TODO change css layout -->
-      <a href="Calc/calc.html">
-        <h1>
-          My Calculator
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
-          dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
-          repellendus recusandae mollitia unde omnis atque doloremque nesciunt
-          officia consequuntur fuga sequi.
-        </p>
-      </a>
-    </section>
-    <section>
-      <h1>
-        2nd Project
-      </h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
-        dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
-        repellendus recusandae mollitia unde omnis atque doloremque nesciunt
-        officia consequuntur fuga sequi.
-      </p>
-    </section>
-    <section>
-      <h1>
-        3rd Project
-      </h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
-        dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
-        repellendus recusandae mollitia unde omnis atque doloremque nesciunt
-        officia consequuntur fuga sequi.
-      </p>
-    </section>
+    <div class="mainContainer">
+      <section>
+        <!-- TODO change css layout -->
+        <div class="projectContainer">
+          <a href="Calc/calc.html">
+            <h1>
+              My Calculator
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+              modi, dolore eum ducimus repellat voluptatibus, dolor
+              exercitationem culpa repellendus recusandae mollitia unde omnis
+              atque doloremque nesciunt officia consequuntur fuga sequi.
+            </p>
+          </a>
+        </div>
+      </section>
+    </div>
 
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
