--- a/sprints.html
+++ b/sprints.html
@@ -46,14 +46,14 @@
         <h3>sprint 1</h3>
         <div class="sprintContainer">
           <div class="linkCultural">
-            <div class="linkContent">
-              <a href="sprints/sprint1cultural.html">CULTURAL</a>
-            </div>
+            <a href="sprints/sprint1cultural.html">
+              <div class="linkContent">CULTURAL</div>
+            </a>
           </div>
           <div class="linkTechnical">
-            <div class="linkContent">
-              <a href="sprints/sprint1technical.html">TECHNICAL</a>
-            </div>
+            <a href="sprints/sprint1technical.html">
+              <div class="linkContent">TECHNICAL</div>
+            </a>
           </div>
         </div>
       </section>
@@ -64,14 +64,18 @@
         <h3>sprint 2</h3>
         <div class="sprintContainer">
           <div class="linkCultural">
-            <div class="linkContent">
-              <a href="sprints/sprint2cultural.html">CULTURAL</a>
-            </div>
+            <a href="sprints/sprint2cultural.html">
+              <div class="linkContent">
+                CULTURAL
+              </div>
+            </a>
           </div>
           <div class="linkTechnical">
-            <div class="linkContent">
-              <a href="sprints/sprint2technical.html">TECHNICAL</a>
-            </div>
+            <a href="sprints/sprint2technical.html">
+              <div class="linkContent">
+                TECHNICAL
+              </div>
+            </a>
           </div>
         </div>
       </section>
@@ -82,14 +86,18 @@
         <h3>sprint 3</h3>
         <div class="sprintContainer">
           <div class="linkCultural">
-            <div class="linkContent">
-              <a href="sprints/sprint3cultural.html">CULTURAL</a>
-            </div>
+            <a href="sprints/sprint3cultural.html">
+              <div class="linkContent">
+                CULTURAL
+              </div>
+            </a>
           </div>
           <div class="linkTechnical">
-            <div class="linkContent">
-              <a href="sprints/sprint3technical.html">TECHNICAL</a>
-            </div>
+            <a href="sprints/sprint3technical.html">
+              <div class="linkContent">
+                TECHNICAL
+              </div>
+            </a>
           </div>
         </div>
       </section>
@@ -100,14 +108,18 @@
         <h3>sprint 4</h3>
         <div class="sprintContainer">
           <div class="linkCultural">
-            <div class="linkContent">
-              <a href="sprints/sprint4cultural.html">CULTURAL</a>
-            </div>
+            <a href="sprints/sprint4cultural.html">
+              <div class="linkContent">
+                CULTURAL
+              </div>
+            </a>
           </div>
           <div class="linkTechnical">
-            <div class="linkContent">
-              <a href="sprints/sprint4technical.html">TECHNICAL</a>
-            </div>
+            <a href="sprints/sprint4technical.html">
+              <div class="linkContent">
+                TECHNICAL
+              </div>
+            </a>
           </div>
         </div>
       </section>
@@ -118,14 +130,18 @@
         <h3>sprint 5</h3>
         <div class="sprintContainer">
           <div class="linkCultural">
-            <div class="linkContent">
-              <a href="sprints/sprint5cultural.html">CULTURAL</a>
-            </div>
+            <a href="sprints/sprint5cultural.html">
+              <div class="linkContent">
+                CULTURAL
+              </div>
+            </a>
           </div>
           <div class="linkTechnical">
-            <div class="linkContent">
-              <a href="sprints/sprint5technical.html">TECHNICAL</a>
-            </div>
+            <a href="sprints/sprint5technical.html">
+              <div class="linkContent">
+                TECHNICAL
+              </div>
+            </a>
           </div>
         </div>
       </section>
