added sprint template

--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -33,11 +33,12 @@
             </div>
             <div onclick="c()" class="ui huge grey button">C</div>
             <div onclick="ce()" class="ui huge grey button">AC</div>
-            <a href="../index.html">
-              <div class="ui huge red button">
-                OFF
-              </div>
-            </a>
+            <div
+              onclick="location.href='../projects.html'"
+              class="ui huge red button"
+            >
+              OFF
+            </div>
           </div>
           <div class="row">
             <div onclick="setValue('7')" class="ui huge button">7</div>
