--- a/projects.html
+++ b/projects.html
@@ -41,19 +41,23 @@
     </div>
     <div class="mainContainer">
       <section>
-        <!-- TODO change css layout -->
         <div class="projectContainer">
-          <a href="Calc/calc.html">
-            <h1>
-              My Calculator
-            </h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              modi, dolore eum ducimus repellat voluptatibus, dolor
-              exercitationem culpa repellendus recusandae mollitia unde omnis
-              atque doloremque nesciunt officia consequuntur fuga sequi.
-            </p>
-          </a>
+          <div class="projectHeader">
+            Calculator
+          </div>
+          <div class="projectLink">
+            <a href="Calc/calc.html">
+              <img
+                class="ui centered image"
+                src="images/CalcLogo.png"
+                alt="calcLogo"
+              />
+            </a>
+          </div>
+          <div class="projectBody">
+            My almost windows functionality clone calculator. You can use your
+            keyboard to type in the numbers and operators you need to calculate.
+          </div>
         </div>
       </section>
     </div>
