--- a/sprints/sprint4cultural.html
+++ b/sprints/sprint4cultural.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Sans:400,800|Shanti|Work+Sans:400,700&display=swap"
       rel="stylesheet"
@@ -16,10 +17,12 @@
     />
     <link rel="stylesheet" href="../styles/themes/fontawesome.min.css" />
     <link rel="stylesheet" href="../styles/styles.css" />
-
+    <link rel="stylesheet" href="../styles/sprint.css" />
     <link href="../styles/themes/prism.css" rel="stylesheet" />
+
     <script src="../js/prism.js"></script>
     <script defer src="../js/fontawesome.min.js"></script>
+
     <title>Sprint 4</title>
   </head>
 
@@ -40,9 +43,14 @@
         </nav>
       </div>
     </div>
-    <div class="ui container">
-      <div class="ui placeholder segment">
-        Sprint 4 Cultural Coming soon!
+    <div class="mainContainer">
+      <div class="sHeader">
+        Sprint 4 Cultural
+      </div>
+      <div class="sContainer">
+        <div class="ui placeholder segment">
+          Sprint 4 Cultural Coming soon!
+        </div>
       </div>
     </div>
     <div class="ui raised segment footerContainer">
