--- a/sprints.html
+++ b/sprints.html
@@ -20,7 +20,7 @@
     <link href="styles/themes/prism.css" rel="stylesheet" />
     <script src="js/prism.js"></script>
     <script defer src="js/fontawesome.min.js"></script>
-    <title>Projects</title>
+    <title>Sprints</title>
   </head>
 
   <body>
