--- a/sprints/sprint1cultural.html
+++ b/sprints/sprint1cultural.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Sans:400,800|Shanti|Work+Sans:400,700&display=swap"
       rel="stylesheet"
@@ -16,10 +17,12 @@
     />
     <link rel="stylesheet" href="../styles/themes/fontawesome.min.css" />
     <link rel="stylesheet" href="../styles/styles.css" />
-
+    <link rel="stylesheet" href="../styles/sprint.css" />
     <link href="../styles/themes/prism.css" rel="stylesheet" />
+
     <script src="../js/prism.js"></script>
     <script defer src="../js/fontawesome.min.js"></script>
+
     <title>Sprint 1</title>
   </head>
 
@@ -40,16 +43,51 @@
         </nav>
       </div>
     </div>
-    <div class="ui container">
-      <section>
-        Sprint 1 Cultural
-        <pre>
-            <code class="language-javascript">for(var i = 0; i < 10; i++){
-                if(i === 8) {
-                    console.log(i) 
-                }
-            }</code></pre>
-      </section>
+
+    <div class="mainContainer">
+      <div class="sContainer">
+        <div class="sHeader">
+          Sprint 1 Cultural
+        </div>
+
+        <section>
+          <div class="sTitle">
+            Javascript Loop
+          </div>
+          <div class="sBody">
+            <pre>
+<code class="language-javascript">for(var i = 0; i < 10; i++){
+    if(i === 8) {
+        console.log(i) 
+    }
+}</code></pre>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Consequatur maxime molestiae rerum cum perferendis, provident
+              inventore ea. Nesciunt, possimus harum.
+            </p>
+          </div>
+        </section>
+
+        <section>
+          <div class="sTitle">Class vs ID</div>
+          <div class="sBody">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequatur, ipsum.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim
+              dolore ab ipsa iusto sed id repellat adipisci libero soluta
+              inventore.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
+              itaque repellat? Optio!
+            </p>
+          </div>
+        </section>
+      </div>
     </div>
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
