modified css defaults

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
       </div>
     </div>
-    <div class="ui container">
+    <div class="mainContainer">
       <header>
         <h1>Welcome to my Foundation's Blog</h1>
         <div class="headerDescription">
