--- a/projects.html
+++ b/projects.html
@@ -39,27 +39,31 @@
         </nav>
       </div>
     </div>
+    <!-- TODO add animation to hover  -->
     <div class="mainContainer">
-      <section>
-        <div class="projectContainer">
-          <div class="projectHeader">
-            Calculator
+      <article>
+        <section>
+          <div class="projectContainer">
+            <div class="projectHeader">
+              Calculator
+            </div>
+            <div class="projectLink">
+              <a href="Calc/calc.html">
+                <img
+                  class="ui centered image"
+                  src="images/CalcLogo.png"
+                  alt="calcLogo"
+                />
+              </a>
+            </div>
+            <div class="projectBody">
+              My almost windows functionality clone calculator. You can use your
+              keyboard to type in the numbers and operators you need to
+              calculate.
+            </div>
           </div>
-          <div class="projectLink">
-            <a href="Calc/calc.html">
-              <img
-                class="ui centered image"
-                src="images/CalcLogo.png"
-                alt="calcLogo"
-              />
-            </a>
-          </div>
-          <div class="projectBody">
-            My almost windows functionality clone calculator. You can use your
-            keyboard to type in the numbers and operators you need to calculate.
-          </div>
-        </div>
-      </section>
+        </section>
+      </article>
     </div>
 
     <div class="ui raised segment footerContainer">
