--- a/sprints.html
+++ b/sprints.html
@@ -41,111 +41,113 @@
       </div>
     </div>
 
-    <article>
-      <section>
-        <h3>sprint 1</h3>
-        <div class="sprintContainer">
-          <div class="linkCultural">
-            <a href="sprints/sprint1cultural.html">
-              <div class="linkContent">CULTURAL</div>
-            </a>
+    <div class="mainContainer">
+      <article>
+        <section>
+          <h3>sprint 1</h3>
+          <div class="sprintContainer">
+            <div class="linkCultural">
+              <a href="sprints/sprint1cultural.html">
+                <div class="linkContent">CULTURAL</div>
+              </a>
+            </div>
+            <div class="linkTechnical">
+              <a href="sprints/sprint1technical.html">
+                <div class="linkContent">TECHNICAL</div>
+              </a>
+            </div>
           </div>
-          <div class="linkTechnical">
-            <a href="sprints/sprint1technical.html">
-              <div class="linkContent">TECHNICAL</div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </article>
+        </section>
+      </article>
 
-    <article>
-      <section>
-        <h3>sprint 2</h3>
-        <div class="sprintContainer">
-          <div class="linkCultural">
-            <a href="sprints/sprint2cultural.html">
-              <div class="linkContent">
-                CULTURAL
-              </div>
-            </a>
+      <article>
+        <section>
+          <h3>sprint 2</h3>
+          <div class="sprintContainer">
+            <div class="linkCultural">
+              <a href="sprints/sprint2cultural.html">
+                <div class="linkContent">
+                  CULTURAL
+                </div>
+              </a>
+            </div>
+            <div class="linkTechnical">
+              <a href="sprints/sprint2technical.html">
+                <div class="linkContent">
+                  TECHNICAL
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="linkTechnical">
-            <a href="sprints/sprint2technical.html">
-              <div class="linkContent">
-                TECHNICAL
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </article>
+        </section>
+      </article>
 
-    <article>
-      <section>
-        <h3>sprint 3</h3>
-        <div class="sprintContainer">
-          <div class="linkCultural">
-            <a href="sprints/sprint3cultural.html">
-              <div class="linkContent">
-                CULTURAL
-              </div>
-            </a>
+      <article>
+        <section>
+          <h3>sprint 3</h3>
+          <div class="sprintContainer">
+            <div class="linkCultural">
+              <a href="sprints/sprint3cultural.html">
+                <div class="linkContent">
+                  CULTURAL
+                </div>
+              </a>
+            </div>
+            <div class="linkTechnical">
+              <a href="sprints/sprint3technical.html">
+                <div class="linkContent">
+                  TECHNICAL
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="linkTechnical">
-            <a href="sprints/sprint3technical.html">
-              <div class="linkContent">
-                TECHNICAL
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </article>
+        </section>
+      </article>
 
-    <article>
-      <section>
-        <h3>sprint 4</h3>
-        <div class="sprintContainer">
-          <div class="linkCultural">
-            <a href="sprints/sprint4cultural.html">
-              <div class="linkContent">
-                CULTURAL
-              </div>
-            </a>
+      <article>
+        <section>
+          <h3>sprint 4</h3>
+          <div class="sprintContainer">
+            <div class="linkCultural">
+              <a href="sprints/sprint4cultural.html">
+                <div class="linkContent">
+                  CULTURAL
+                </div>
+              </a>
+            </div>
+            <div class="linkTechnical">
+              <a href="sprints/sprint4technical.html">
+                <div class="linkContent">
+                  TECHNICAL
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="linkTechnical">
-            <a href="sprints/sprint4technical.html">
-              <div class="linkContent">
-                TECHNICAL
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </article>
+        </section>
+      </article>
 
-    <article>
-      <section>
-        <h3>sprint 5</h3>
-        <div class="sprintContainer">
-          <div class="linkCultural">
-            <a href="sprints/sprint5cultural.html">
-              <div class="linkContent">
-                CULTURAL
-              </div>
-            </a>
+      <article>
+        <section>
+          <h3>sprint 5</h3>
+          <div class="sprintContainer">
+            <div class="linkCultural">
+              <a href="sprints/sprint5cultural.html">
+                <div class="linkContent">
+                  CULTURAL
+                </div>
+              </a>
+            </div>
+            <div class="linkTechnical">
+              <a href="sprints/sprint5technical.html">
+                <div class="linkContent">
+                  TECHNICAL
+                </div>
+              </a>
+            </div>
           </div>
-          <div class="linkTechnical">
-            <a href="sprints/sprint5technical.html">
-              <div class="linkContent">
-                TECHNICAL
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-    </article>
+        </section>
+      </article>
+    </div>
 
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
