added css for links

--- a/sprints/sprint1technical.html
+++ b/sprints/sprint1technical.html
@@ -43,16 +43,25 @@
         </nav>
       </div>
     </div>
+
     <div class="mainContainer">
-      <div class="sHeader">
-        Sprint 1 Technical
-      </div>
       <div class="sContainer">
-        <div class="ui placeholder segment">
-          Sprint 1 Technical Coming soon!
+        <div class="sHeader">
+          Sprint 1 Technical
         </div>
+
+        <section>
+          <div class="ui placeholder segment">
+            Sprint 1 Technical Coming soon!
+          </div>
+        </section>
+
+        <section>
+          <div class="test">S</div>
+        </section>
       </div>
     </div>
+
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
         <h3>Copyright Matt Uy</h3>
