--- a/sprints/sprint5cultural.html
+++ b/sprints/sprint5cultural.html
@@ -15,13 +15,15 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="../styles/themes/fontawesome.min.css" />
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="stylesheet" href="../styles/sprint.css" />
     <link href="../styles/themes/prism.css" rel="stylesheet" />
 
     <script src="../js/prism.js"></script>
-    <script defer src="../js/fontawesome.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/3278f04ffd.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Sprint 5</title>
   </head>
@@ -53,9 +55,19 @@
         </div>
       </div>
     </div>
+
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
-        <h3>Copyright Matt Uy</h3>
+        <a href="mailto:mattuy001@gmail.com">
+          <i class="far fa-envelope fa-lg"></i>
+        </a>
+        <a href="https://github.com/malyz01">
+          <i class="fab fa-github fa-lg"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <h3>&copy Copyright Matt Uy</h3>
       </div>
     </div>
   </body>
