--- a/sprints.html
+++ b/sprints.html
@@ -14,12 +14,14 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="styles/themes/fontawesome.min.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/sprints.css" />
-    <link href="styles/themes/prism.css" rel="stylesheet" />
-    <script src="js/prism.js"></script>
-    <script defer src="js/fontawesome.min.js"></script>
+
+    <script
+      src="https://kit.fontawesome.com/3278f04ffd.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Sprints</title>
   </head>
 
@@ -151,6 +153,15 @@
 
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
+        <a href="mailto:mattuy001@gmail.com">
+          <i class="far fa-envelope fa-lg"></i>
+        </a>
+        <a href="https://github.com/malyz01">
+          <i class="fab fa-github fa-lg"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
         <h3>&copy Copyright Matt Uy</h3>
       </div>
     </div>
