added template for sprints

--- a/sprints/sprint1cultural.html
+++ b/sprints/sprint1cultural.html
@@ -83,6 +83,14 @@
               dolore ab ipsa iusto sed id repellat adipisci libero soluta
               inventore.
             </p>
+            <pre>
+<code class="language-css">.classname {
+font-size: 1rem;
+}
+
+#id {
+background: black;
+}</code></pre>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
               itaque repellat? Optio!
