--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
           <i class="fab fa-github fa-lg"></i>
         </a>
         <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
-          <i class="fab fa-linkedin-in"></i>
+          <i class="fab fa-linkedin-in fa-lg"></i>
         </a>
         <h3>&copy Copyright Matt Uy</h3>
       </div>
