--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="mainContainer">
       <header>
-        <h1>Welcome to my Foundation's Blog</h1>
+        <h1>Foundation's Blog</h1>
         <div class="headerDescription">
           Hi there! I'm Matthew Philip Uy, an aspiring individual who is willing
           to push limits to become a full fledge web developer. This blog would
