adjusted some margins and added year for copyright

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
       </section>
     </div>
+
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
         <a href="mailto:mattuy001@gmail.com">
@@ -95,7 +96,12 @@
         <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
           <i class="fab fa-linkedin-in fa-lg"></i>
         </a>
-        <h3>&copy Copyright Matt Uy</h3>
+        <h3>
+          &copy Matthew Uy
+          <script type="text/javascript">
+            document.write(new Date(Date.now()).getFullYear());
+          </script>
+        </h3>
       </div>
     </div>
   </body>
