--- a/sprints/sprint1cultural.html
+++ b/sprints/sprint1cultural.html
@@ -49,7 +49,7 @@
     <div class="mainContainer">
       <div class="sContainer">
         <div class="sHeader">
-          Sprint 1 Cultural
+          Sprint 1 - Cultural
         </div>
 
         <section>
@@ -109,9 +109,14 @@ background: black;
           <i class="fab fa-github fa-lg"></i>
         </a>
         <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
-          <i class="fab fa-linkedin-in fa=lg"></i>
+          <i class="fab fa-linkedin-in fa-lg"></i>
         </a>
-        <h3>&copy Copyright Matt Uy</h3>
+        <h3>
+          &copy Matthew Uy
+          <script type="text/javascript">
+            document.write(new Date(Date.now()).getFullYear());
+          </script>
+        </h3>
       </div>
     </div>
   </body>
