--- a/sprints/sprint1technical.html
+++ b/sprints/sprint1technical.html
@@ -49,17 +49,13 @@
     <div class="mainContainer">
       <div class="sContainer">
         <div class="sHeader">
-          Sprint 1 Technical
+          Sprint 1 - Technical
         </div>
 
         <section>
           <div class="ui placeholder segment">
             Sprint 1 Technical Coming soon!
           </div>
-        </section>
-
-        <section>
-          <div class="test">S</div>
         </section>
       </div>
     </div>
@@ -75,7 +71,12 @@
         <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
           <i class="fab fa-linkedin-in fa-lg"></i>
         </a>
-        <h3>&copy Copyright Matt Uy</h3>
+        <h3>
+          &copy Matthew Uy
+          <script type="text/javascript">
+            document.write(new Date(Date.now()).getFullYear());
+          </script>
+        </h3>
       </div>
     </div>
   </body>
