--- a/sprints/sprint3technical.html
+++ b/sprints/sprint3technical.html
@@ -47,7 +47,7 @@
     </div>
     <div class="mainContainer">
       <div class="sHeader">
-        Sprint 3 Technical
+        Sprint 3 - Technical
       </div>
       <div class="sContainer">
         <div class="ui placeholder segment">
@@ -67,7 +67,12 @@
         <a href="https://www.linkedin.com/in/matthew-philip-uy-7b305815a/">
           <i class="fab fa-linkedin-in fa-lg"></i>
         </a>
-        <h3>&copy Copyright Matt Uy</h3>
+        <h3>
+          &copy Matthew Uy
+          <script type="text/javascript">
+            document.write(new Date(Date.now()).getFullYear());
+          </script>
+        </h3>
       </div>
     </div>
   </body>
