--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -19,8 +19,9 @@
   </head>
   <body>
     <div class="ui container main">
-      <div class="ui raised segment placeholder mainContainer">
-        <div class="ui segment">
+      <div class="ui segment placeholder mainContainer">
+        <div class="title">Calculator</div>
+        <div class="ui segment displayContainer">
           <div class="history">
             <span id="history"></span><span id="operator"></span>
           </div>
@@ -28,49 +29,49 @@
         </div>
         <div class="ui grid btnContainer">
           <div class="row">
-            <div onclick="opposite('+/-')" class="ui huge grey button">
+            <div onclick="opposite('+/-')" class="ui huge misc button">
               +/-
             </div>
-            <div onclick="c()" class="ui huge grey button">C</div>
-            <div onclick="ce()" class="ui huge grey button">AC</div>
+            <div onclick="c()" class="ui huge misc button">C</div>
+            <div onclick="ce()" class="ui huge misc button">AC</div>
             <div
               onclick="location.href='../projects.html'"
-              class="ui huge red button"
+              class="ui huge eqOff button"
             >
               OFF
             </div>
           </div>
           <div class="row">
-            <div onclick="setValue('7')" class="ui huge button">7</div>
-            <div onclick="setValue('8')" class="ui huge button">8</div>
-            <div onclick="setValue('9')" class="ui huge button">9</div>
-            <div onclick="setOperator('÷')" class="ui huge grey button">
+            <div onclick="setValue('7')" class="ui huge button num">7</div>
+            <div onclick="setValue('8')" class="ui huge button num">8</div>
+            <div onclick="setValue('9')" class="ui huge button num">9</div>
+            <div onclick="setOperator('÷')" class="ui huge misc button">
               ÷
             </div>
           </div>
           <div class="row">
-            <div onclick="setValue('4')" class="ui huge button">4</div>
-            <div onclick="setValue('5')" class="ui huge button">5</div>
-            <div onclick="setValue('6')" class="ui huge button">6</div>
-            <div onclick="setOperator('*')" class="ui huge grey button">
+            <div onclick="setValue('4')" class="ui huge button num">4</div>
+            <div onclick="setValue('5')" class="ui huge button num">5</div>
+            <div onclick="setValue('6')" class="ui huge button num">6</div>
+            <div onclick="setOperator('*')" class="ui huge misc button">
               x
             </div>
           </div>
           <div class="row">
-            <div onclick="setValue('1')" class="ui huge button">1</div>
-            <div onclick="setValue('2')" class="ui huge button">2</div>
-            <div onclick="setValue('3')" class="ui huge button">3</div>
-            <div onclick="setOperator('-')" class="ui huge grey button">
+            <div onclick="setValue('1')" class="ui huge button num">1</div>
+            <div onclick="setValue('2')" class="ui huge button num">2</div>
+            <div onclick="setValue('3')" class="ui huge button num">3</div>
+            <div onclick="setOperator('-')" class="ui huge misc button">
               -
             </div>
           </div>
           <div class="row">
-            <div onclick="setValue('.')" class="ui huge button">.</div>
-            <div onclick="setValue('0')" class="ui huge button">0</div>
-            <div onclick="equal()" class="ui huge blue button">
+            <div onclick="setValue('.')" class="ui huge button num">.</div>
+            <div onclick="setValue('0')" class="ui huge button num">0</div>
+            <div onclick="equal()" class="ui huge button eqOff">
               =
             </div>
-            <div onclick="setOperator('+')" class="ui huge grey button">
+            <div onclick="setOperator('+')" class="ui huge misc button">
               +
             </div>
           </div>
