change cultural to core

--- a/sprints.html
+++ b/sprints.html
@@ -48,9 +48,9 @@
         <section>
           <h3>sprint 1</h3>
           <div class="sprintContainer">
-            <div class="linkCultural">
-              <a href="sprints/sprint1cultural.html">
-                <div class="linkContent">CULTURAL</div>
+            <div class="linkCore">
+              <a href="sprints/sprint1core.html">
+                <div class="linkContent">CORE</div>
               </a>
             </div>
             <div class="linkTechnical">
@@ -66,10 +66,10 @@
         <section>
           <h3>sprint 2</h3>
           <div class="sprintContainer">
-            <div class="linkCultural">
-              <a href="sprints/sprint2cultural.html">
+            <div class="linkCore">
+              <a href="sprints/sprint2core.html">
                 <div class="linkContent">
-                  CULTURAL
+                  CORE
                 </div>
               </a>
             </div>
@@ -88,10 +88,10 @@
         <section>
           <h3>sprint 3</h3>
           <div class="sprintContainer">
-            <div class="linkCultural">
-              <a href="sprints/sprint3cultural.html">
+            <div class="linkCore">
+              <a href="sprints/sprint3core.html">
                 <div class="linkContent">
-                  CULTURAL
+                  CORE
                 </div>
               </a>
             </div>
@@ -110,10 +110,10 @@
         <section>
           <h3>sprint 4</h3>
           <div class="sprintContainer">
-            <div class="linkCultural">
-              <a href="sprints/sprint4cultural.html">
+            <div class="linkCore">
+              <a href="sprints/sprint4core.html">
                 <div class="linkContent">
-                  CULTURAL
+                  CORE
                 </div>
               </a>
             </div>
@@ -132,10 +132,10 @@
         <section>
           <h3>sprint 5</h3>
           <div class="sprintContainer">
-            <div class="linkCultural">
-              <a href="sprints/sprint5cultural.html">
+            <div class="linkCore">
+              <a href="sprints/sprint5core.html">
                 <div class="linkContent">
-                  CULTURAL
+                  CORE
                 </div>
               </a>
             </div>
