--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 
     <div class="mainContainer">
       <article>
-        <section>
+        <!-- <section>
           <div class="projectContainer">
             <div class="projectHeader">
               Calculator
@@ -61,7 +61,7 @@
               keyboard to type in the numbers and operators to calculate.
             </div>
           </div>
-        </section>
+        </section> -->
 
         <section>
           <!-- add another project -->
